modify home & module page

--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -8,14 +8,14 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="401dp"
-        android:layout_height="536dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_width="380dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,134 +24,222 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:divider="?attr/dividerHorizontal"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="100dp"
+            android:showDividers="middle">
 
-            <CheckBox
-                android:id="@+id/checkBox"
+            <Button
+                android:id="@+id/button2"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU3E03 Probability and Statistics "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU3E03 Probability and Statistics"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
 
-            <CheckBox
-                android:id="@+id/checkBox2"
+            <Button
+                android:id="@+id/button3"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C01 Signals and Systems "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU33C01 Signals and Systems"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox3"
+            <Button
+                android:id="@+id/button4"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C02 Digital Circuits "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU33C02 Digital Circuits"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox4"
+            <Button
+                android:id="@+id/button5"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="MAU33E01 Engineering Mathematics V "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="MAU33E01 Engineering Mathematics V"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox5"
+            <Button
+                android:id="@+id/button6"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C07 Digital Systems Design "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU33C07 Digital Systems Design"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox6"
+            <Button
+                android:id="@+id/button7"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CSU33D01 Microprocessor Systems I "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="CSU33D01 Microprocessor Systems I"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox7"
+            <Button
+                android:id="@+id/button8"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#009688"
+                android:padding="5dp"
                 android:text="CSU33D02 Microprocessor Systems II"
-                android:onClick="selectModule"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox8"
+            <Button
+                android:id="@+id/button9"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CSU33D03Computer Networks"
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="CSU33D03 Computer Networks"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox9"
+            <Button
+                android:id="@+id/button10"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#009688"
+                android:padding="5dp"
                 android:text="CSU33D04 Operating Systems and Concurrent Systems"
-                android:onClick="selectModule"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox10"
+            <Button
+                android:id="@+id/button11"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CSU333D05 Data Structures"
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="CSU33D05 Data Structures"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox11"
+            <Button
+                android:id="@+id/button12"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#009688"
+                android:padding="5dp"
                 android:text="CSU33D06 Software Design Analysis"
-                android:onClick="selectModule"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox12"
+            <Button
+                android:id="@+id/button13"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CEU33E04 Innovation+Entrepreneurship for Engineers"
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="CEU33E04 Innovation and Entrepreneurship for Engineers"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox13"
+            <Button
+                android:id="@+id/button14"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C05 Telecommunications "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU33C05 Telecommunications"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox14"
+            <Button
+                android:id="@+id/button15"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C07 Digital Systems Design "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="EEU33C08 Digital Circuits Design"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox15"
+            <Button
+                android:id="@+id/button16"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C08 Digital Circuits Design "
-                android:onClick="selectModule"/>
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="CSU33D06 Software Design and Implementation"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
-            <CheckBox
-                android:id="@+id/checkBox16"
+            <Button
+                android:id="@+id/button17"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EEU33C05 Telecommunications "
-                android:onClick="selectModule"/>
-
-            <CheckBox
-                android:id="@+id/checkBox17"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CSU33D06 Software Design and Implementation "
-                android:onClick="selectModule"/>
-
-            <CheckBox
-                android:id="@+id/checkBox18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="selectModule"
-                android:text="MAU33E02 Engineering Mathematics VI" />
+                android:background="#009688"
+                android:padding="5dp"
+                android:text="MAU33E02 Engineering Mathematics VI"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="normal" />
 
         </LinearLayout>
     </ScrollView>
@@ -166,37 +254,20 @@
         android:layout_marginEnd="97dp"
         android:layout_marginRight="97dp"
         android:layout_marginBottom="8dp"
-        android:background="#DBB781"
+        android:background="#00DBB781"
         android:clickable="false"
         android:padding="4dp"
-        android:text="Year-3 Modules List"
+        android:text="My Modules"
         android:textSize="28sp"
-        android:textStyle="bold|italic"
-        android:typeface="serif"
+        android:textStyle="bold"
+        android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.736"
+        app:layout_constraintHorizontal_bias="0.636"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.02"
-        tools:text="Year-3 Modules List" />
-
-    <Button
-        android:id="@+id/proceedButton"
-        android:layout_width="136dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="137dp"
-        android:layout_marginLeft="137dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="138dp"
-        android:layout_marginRight="138dp"
-        android:layout_marginBottom="29dp"
-        android:onClick="proceedButton"
-        android:text="Proceed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        tools:text="My Modules" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
