changed 3E3 probability -> 3E3 probability nd statistics

--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:background="#009688"
                 android:padding="5dp"
-                android:text="EEU3E03 Probability"
+                android:text="EEU3E03 Probability and Statistics"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
