--- a/app/src/main/res/layout/activity_module_list.xml
+++ b/app/src/main/res/layout/activity_module_list.xml
@@ -6,19 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".ModuleList">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="380dp"
-        android:layout_height="500dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="100dp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="1116dp"
+        android:layout_height="860dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backgorund" />
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="401dp"
+        android:layout_height="501dp"
+        android:layout_marginTop="14dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/modulesTextView"
         app:layout_constraintTop_toBottomOf="@+id/modulesTextView">
 
         <LinearLayout
@@ -32,6 +37,7 @@
             android:paddingBottom="100dp"
             android:showDividers="middle">
 
+
             <Button
                 android:id="@+id/button2"
                 style="@style/Widget.AppCompat.Button"
@@ -44,7 +50,6 @@
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="normal" />
-
 
             <Button
                 android:id="@+id/button3"
@@ -246,8 +251,8 @@
 
     <TextView
         android:id="@+id/modulesTextView"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_width="404dp"
+        android:layout_height="61dp"
         android:layout_marginStart="186dp"
         android:layout_marginLeft="186dp"
         android:layout_marginTop="26dp"
@@ -256,9 +261,10 @@
         android:layout_marginBottom="8dp"
         android:background="#00DBB781"
         android:clickable="false"
+        android:gravity="center_horizontal|center_vertical"
         android:padding="4dp"
         android:text="My Modules"
-        android:textSize="28sp"
+        android:textSize="32sp"
         android:textStyle="bold"
         android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
