--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -9,11 +9,12 @@
 
     <TextView
         android:id="@+id/attendancePercentageTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="272dp"
+        android:layout_height="42dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="88dp"
         android:text="Your attendance is: "
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonMissed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +52,8 @@
 
     <EditText
         android:id="@+id/ModuleNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="326dp"
+        android:layout_height="44dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="32dp"
