--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/attendancePercentageTextView"
-        android:layout_width="272dp"
-        android:layout_height="42dp"
+        android:layout_width="297dp"
+        android:layout_height="39dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="88dp"
         android:text="Your attendance is: "
@@ -64,6 +64,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/toAttendMissView"
+        android:layout_width="358dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="40dp"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAttended"
+        app:layout_constraintTop_toBottomOf="@+id/attendancePercentageTextView"
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
