--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -11,14 +11,12 @@
         android:id="@+id/attendancePercentageTextView"
         android:layout_width="297dp"
         android:layout_height="39dp"
-        android:layout_marginTop="32dp"
         android:layout_marginBottom="88dp"
         android:text="Your attendance is: "
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonMissed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ModuleNameText" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonAttended"
@@ -50,33 +48,42 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
-    <EditText
-        android:id="@+id/ModuleNameText"
-        android:layout_width="326dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Module Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/toAttendMissView"
         android:layout_width="358dp"
         android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginRight="37dp"
         android:layout_marginBottom="40dp"
-        android:foregroundGravity="center"
-        android:gravity="center"
+        android:foregroundGravity="fill_horizontal|clip_horizontal|center"
+        android:gravity="clip_horizontal|center|fill_horizontal"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonAttended"
-        app:layout_constraintTop_toBottomOf="@+id/attendancePercentageTextView"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attendancePercentageTextView" />
+
+    <TextView
+        android:id="@+id/ModuleNameText"
+        android:layout_width="329dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginLeft="42dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="61dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/attendancePercentageTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
