--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,12 @@
         android:textSize="18sp" />
 
     <Button
+        android:id="@+id/TeacherPage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Teacher Login" />
+
+    <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
